wip, need to acoid dyn alloc in pub fn public_key_to_address_base58(public_key: &[u8], is_hashed: bool) -> Result<String, AppSW> {  or reimplement it

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -44,6 +44,8 @@ lto = 'fat'
 default = ["ledger_device_sdk/nano_nbgl", "log_debug"]
 log_debug = ["ledger_device_sdk/debug"]
 
+test_pubkey = []
+
 [package.metadata.ledger]
 curve = ["secp256k1"]
 flags = "0"
