--- a/Cargo.toml
+++ b/Cargo.toml
@@ -42,8 +42,16 @@ opt-level = 'z'
 lto = 'fat'
 
 [features]
-default = ["ledger_device_sdk/nano_nbgl", "log_debug"]
-log_debug = ["ledger_device_sdk/debug"]
+default = [
+    "ledger_device_sdk/nano_nbgl",
+    "ledger_device_sdk/log_error",
+    "ledger_device_sdk/log_warn",
+    "ledger_device_sdk/log_info",
+    "ledger_device_sdk/log_debug",
+    "ledger_device_sdk/log_trace",
+]
+
+debug = ["ledger_device_sdk/debug"]
 
 [package.metadata.ledger]
 curve = ["secp256k1"]
