Review fixes II

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -42,19 +42,12 @@ opt-level = 'z'
 lto = 'fat'
 
 [features]
-default = [
-    "ledger_device_sdk/nano_nbgl",
-    "all_log_levels"
-]
+default = []
 
 # Enables debug logging
-debug = ["ledger_device_sdk/debug"]
-all_log_levels = [
-    "ledger_device_sdk/log_error",
-    "ledger_device_sdk/log_warn",
-    "ledger_device_sdk/log_info",
-    "ledger_device_sdk/log_debug",
-    "ledger_device_sdk/log_trace",
+debug = [
+    "ledger_device_sdk/debug",
+    "ledger_device_sdk/log_debug"
 ]
 
 [package.metadata.ledger]
