--- a/Cargo.toml
+++ b/Cargo.toml
@@ -47,6 +47,8 @@ default = ["ledger_device_sdk/nano_nbgl", "legacy_path"]
 # Enables debug logging
 debug = ["ledger_device_sdk/debug", "ledger_device_sdk/log_debug"]
 
+legacy_path = []
+
 [package.metadata.ledger]
 curve = ["secp256k1"]
 flags = "0"
